erDiagram
    USERS ||--o{ SOLICITUDES : crea
    USERS ||--o{ ORDENES : asignado
    USERS ||--o{ NOTIFICATIONS : recibe
    
    SOLICITUDES ||--o{ ORDENES : genera
    SOLICITUDES }o--|| USERS : cliente
    SOLICITUDES }o--|| AREAS : pertenece
    
    ORDENES ||--o{ ORDEN_ITEMS : contiene
    ORDENES ||--o{ AVANCES : tiene
    ORDENES ||--o{ EVIDENCIAS : tiene
    ORDENES ||--|| FACTURAS : genera
    ORDENES }o--|| SOLICITUDES : origen
    ORDENES }o--|| CENTRO_TRABAJO : ubicacion
    ORDENES }o--|| SERVICIO_EMPRESA : servicio
    
    FACTURAS }o--|| ORDENES : factura
    FACTURAS ||--o{ ARCHIVOS : xml
    
    USERS {
        int id PK
        string name
        string email
        string role
        boolean activo
    }
    
    SOLICITUDES {
        int id PK
        int id_cliente FK
        int id_area FK
        string estado
        text descripcion
        timestamp created_at
    }
    
    ORDENES {
        int id PK
        int id_solicitud FK
        int id_tl FK
        int id_servicio FK
        int id_centro FK
        string estado
        decimal progreso
        timestamp created_at
    }
    
    FACTURAS {
        int id PK
        int id_orden FK
        string folio
        decimal total
        string estado
        string pdf_path
        string xml_path
        timestamp created_at
    }
